src/test/ui/error-codes/E0516.stderr
error[E0516]: `typeof` is a reserved keyword but unimplemented
  --> $DIR/E0516.rs:12:12
   |
12 |     let x: typeof(92) = 92; //~ ERROR E0516
   |            ^^^^^^^^^^ reserved keyword

error: aborting due to previous error

